// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`mergeWith() > duplicate values 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "entityTypes": [
            "Entity",
          ],
          "list": false,
          "name": "entity",
          "required": false,
          "type": "Entity",
        },
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "string",
          "required": false,
          "type": "String",
          "values": [
            {
              "value": "a",
            },
            {
              "value": "b",
            },
          ],
        },
        {
          "adminOnly": false,
          "entityTypes": [
            "Entity",
          ],
          "linkEntityTypes": [
            "Entity",
          ],
          "list": false,
          "name": "richText",
          "required": false,
          "richTextNodes": [
            "linebreak",
            "paragraph",
            "root",
            "text",
          ],
          "type": "RichText",
          "valueTypes": [
            "ValueType",
          ],
        },
        {
          "adminOnly": false,
          "list": false,
          "name": "valueItem",
          "required": false,
          "type": "ValueItem",
          "valueTypes": [
            "ValueType",
          ],
        },
      ],
      "name": "Entity",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [
    {
      "adminOnly": false,
      "fields": [],
      "name": "ValueType",
    },
  ],
}
`;

exports[`mergeWith() > empty->entity with pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "aPattern",
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": "^hello$",
    },
  ],
  "valueTypes": [],
}
`;

exports[`mergeWith() > field with index 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": "unique-index",
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [
    {
      "name": "unique-index",
      "type": "unique",
    },
  ],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > field with matchPattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": "aPattern",
          "multiline": false,
          "name": "title",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": "^pattern$",
    },
  ],
  "valueTypes": [],
}
`;

exports[`mergeWith() > fields not updated are kept 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "string",
          "required": true,
          "type": "String",
          "values": [],
        },
        {
          "adminOnly": false,
          "integer": false,
          "list": false,
          "name": "number",
          "required": false,
          "type": "Number",
        },
        {
          "adminOnly": false,
          "list": false,
          "name": "boolean",
          "required": false,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > unused pattern is removed 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > update pattern 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": "aPattern",
      "fields": [],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [
    {
      "name": "aPattern",
      "pattern": "^new-pattern$",
    },
  ],
  "valueTypes": [],
}
`;

exports[`mergeWith() > use existing adminOnly value if not specified on field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": true,
          "list": false,
          "name": "field",
          "required": false,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > use existing index value if not specified on String field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": "anIndex",
          "list": false,
          "matchPattern": null,
          "multiline": false,
          "name": "field",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [
    {
      "name": "anIndex",
      "type": "unique",
    },
  ],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > use existing list value if not specified on field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "index": null,
          "list": true,
          "matchPattern": null,
          "multiline": false,
          "name": "field",
          "required": false,
          "type": "String",
          "values": [],
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;

exports[`mergeWith() > use existing required value if not specified on field update 1`] = `
{
  "entityTypes": [
    {
      "adminOnly": false,
      "authKeyPattern": null,
      "fields": [
        {
          "adminOnly": false,
          "list": false,
          "name": "field",
          "required": true,
          "type": "Boolean",
        },
      ],
      "name": "Foo",
      "nameField": null,
    },
  ],
  "indexes": [],
  "patterns": [],
  "valueTypes": [],
}
`;
